메인페이지 & 졸업요건검사 페이지 완료

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "d3-ease": "^3.0.1",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-move": "^6.5.0",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
