--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "next": "15.2.1",
+    "next-navigation-guard": "^0.1.2",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
