ui 완성 및 로그인&강의검색(수정필요)&강의디테일(보완필요) api 연결 + zustand 사용자 인증 전역 관리 상태 추가

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
