--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "next": "15.2.1",
     "next-navigation-guard": "^0.1.2",
     "react": "^18.3.1",
